--- a/ConferenceRegistrationSolution/ConferenceRegistrationAPI/appsettings.Development.json
+++ b/ConferenceRegistrationSolution/ConferenceRegistrationAPI/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "markupApi": "http://localhost:1338/"
 }
