--- a/ConferenceRegistrationSolution/ConferenceRegistrationAPI/ConferenceRegistrationAPI.csproj
+++ b/ConferenceRegistrationSolution/ConferenceRegistrationAPI/ConferenceRegistrationAPI.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.3" />
+    <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
